k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blncs
  labels:
    name: blncs
    app.kubernetes.io/name: blncs
    app.kubernetes.io/component: lightning-network
